# job_hunter_bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  job_search.yml
job_hunter_bot/: __init__.py  bot.py  candidate_profile.py  config.py  crud.py  db.py  filters.py  formatting.py  hh_client.py  llm.py  notifier.py  scoring.py  search_runner.py  skills.py
job_hunter_bot/web/: __init__.py  app.py
job_hunter_bot/web/templates/: dashboard.html
migrations/: env.py
migrations/versions/: 20260703_0001_create_vacancies.py  20260704_0002_add_draft_reply_cached.py  20260704_0003_add_semantic_score_cached.py
scripts/: run_bot.py  run_search.py
tests/: test_bot_keyboard.py  test_crud_async.py  test_filters.py  test_formatting.py  test_hh_client.py  test_llm.py  test_llm_cache.py  test_scoring.py  test_web_app.py
