[project]
name = "job-hunter-bot"
version = "1.0.0"
description = "Автоматический поиск вакансий на hh.ru (Junior Python/Android/IT Support/Helpdesk/SysAdmin) с оценкой релевантности и уведомлениями в Telegram"
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "aiogram>=3.4,<4.0",
    "httpx>=0.27,<0.28",
    "SQLAlchemy>=2.0,<3.0",
    "aiosqlite>=0.20,<0.21",
    "asyncpg>=0.29,<0.30",
    "alembic>=1.13,<2.0",
    "google-genai>=1.0,<2.0",
    "fastapi>=0.111,<0.112",
    "uvicorn>=0.30,<0.31",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<0.24",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.4,<0.5",
    "mypy>=1.10,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["job_hunter_bot*"]
